feat: add otel-New Relic integration

--- a/configs/.env.example
+++ b/configs/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=boilerplate
+APP_NAME=nebeng-jek
 APP_PORT=9999
 APP_ENV=development
 
@@ -8,7 +8,9 @@ DB_PASSWORD=products
 DB_HOST=postgres_container
 DB_PORT=5432
 
-OTEL_RECEIVER_OTLP_ENDPOINT=103.127.137.201:30001
+OTEL_SERVICE_NAME=nebeng-jek
+OTEL_EXPORTER_OTLP_ENDPOINT=https://otlp.nr-data.net
+OTEL_EXPORTER_OTLP_HEADERS=api-key=<your_license_key>
 
 #Redis
 REDIS_HOST=redis_container
@@ -20,3 +22,5 @@ REDIS_APP_CONFIG=
 JWT_SECRET_KEY=PASSWORD
 
 NATS_URL=nats://127.0.0.1:4222
+
+LOG_FILE_PATH=data/logs/rides.log
