feat: add and integrate payment feature

--- a/configs/.env.example
+++ b/configs/.env.example
@@ -24,3 +24,6 @@ JWT_SECRET_KEY=PASSWORD
 NATS_URL=nats://127.0.0.1:4222
 
 LOG_FILE_PATH=data/logs/rides.log
+
+PAYMENT_SERVICE_URL=
+PAYMENT_SERVICE_API_KEY=
