--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,7 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+  workflow_dispatch:
 
 jobs:
   golangci-lint:
@@ -51,3 +52,93 @@ jobs:
       - uses: hadolint/hadolint-action@v3.1.0
         with:
           recursive: true
+
+  build-rides:
+    name: Build Docker App (Rides)
+    runs-on: ubuntu-latest
+    needs: [golangci-lint, test]
+    steps:
+      - uses: actions/checkout@v3
+      - uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Install dependencies
+        run: make tidy-rides
+      - name: Build docker images
+        run: |
+          docker build -f deployments/rides/Dockerfile -t nebengjek/rides:latest .
+  push-image-rides:
+    name: Push Docker Image (Rides)
+    runs-on: ubuntu-latest
+    needs: build-rides
+    if: github.event_name == 'workflow_dispatch'
+    steps:
+      - uses: actions/checkout@v3
+      - uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push docker image
+        run: |
+          docker push nebengjek/rides:latest
+
+  build-riders:
+    name: Build Docker App (Riders)
+    runs-on: ubuntu-latest
+    needs: [golangci-lint, test]
+    steps:
+      - uses: actions/checkout@v3
+      - uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Install dependencies
+        run: make tidy-riders
+      - name: Build docker images
+        run: |
+          docker build -f deployments/riders/Dockerfile -t nebengjek/riders:latest .
+  push-image-riders:
+    name: Push Docker Image (Riders)
+    runs-on: ubuntu-latest
+    needs: build-riders
+    if: github.event_name == 'workflow_dispatch'
+    steps:
+      - uses: actions/checkout@v3
+      - uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push docker image
+        run: |
+          docker push nebengjek/riders:latest
+
+  build-drivers:
+    name: Build Docker App (Drivers)
+    runs-on: ubuntu-latest
+    needs: [golangci-lint, test]
+    steps:
+      - uses: actions/checkout@v3
+      - uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Install dependencies
+        run: make tidy-drivers
+      - name: Build docker images
+        run: |
+          docker build -f deployments/drivers/Dockerfile -t nebengjek/drivers:latest .
+  push-image-drivers:
+    name: Push Docker Image (Drivers)
+    runs-on: ubuntu-latest
+    needs: build-drivers
+    if: github.event_name == 'workflow_dispatch'
+    steps:
+      - uses: actions/checkout@v3
+      - uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push docker image
+        run: |
+          docker push nebengjek/drivers:latest
