--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Golang Test 
+name: Golang CI
 
 on:
   push:
@@ -47,7 +47,26 @@ jobs:
     name: Lint Dockerfiles
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: hadolint/hadolint-action@v3.1.0
         with:
           recursive: true
+  build:
+    name: Build Apps
+    runs-on: ubuntu-latest
+    needs: [golangci-lint, test]
+    strategy:
+      matrix:
+        service:
+          - rides
+          - riders
+          - drivers
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: '1.22'
+      - name: Install dependencies
+        run: make tidy-${{ matrix.service }}
+      - name: Build app
+        run: make build-${{ matrix.service }}
