--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,10 +51,23 @@ jobs:
       - uses: hadolint/hadolint-action@v3.1.0
         with:
           recursive: true
+  sonarqube:
+    name: Sonarqube Checker
+    runs-on: ubuntu-latest
+    needs: [golangci-lint, test]
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+    - name: SonarQube Scan
+      uses: sonarsource/sonarqube-scan-action@v3.0.0
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        SONAR_HOST_URL: ${{ vars.SONAR_HOST_URL }}
   build:
     name: Build Apps
     runs-on: ubuntu-latest
-    needs: [golangci-lint, test]
+    needs: [sonarqube]
     strategy:
       matrix:
         service:
