feat: update sonarqube config

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,7 @@
 sonar.projectKey=nebengjek-demo_nebengjek
 sonar.organization=nebengjek-demo
 
-sonar.exclusions=**/pkg/**/*.go,**/*_test.go,**/mock/*,**/mocks/**/*,**/testdata/**/*.go,**/*.json,**/*.sql,**/*.md,*.mod,*.sum,*.py,Makefile,**/*.properties,deployments/**/*,task-definition/**/*,**/*.html
-sonar.cpd.exclusions=**/cmd/**/*.go,**/value_object/**/*.go,**/pkg/**/*.go,**/repository/**/*.go,**/infrastructure/**/*.go
+# sonar.exclusions=**/pkg/**/*.go,**/*_test.go,**/mock/*,**/mocks/**/*,**/testdata/**/*.go,**/*.json,**/*.sql,**/*.md,*.mod,*.sum,*.py,Makefile,**/*.properties,deployments/**/*,task-definition/**/*,**/*.html
+# sonar.cpd.exclusions=**/cmd/**/*.go,**/value_object/**/*.go,**/pkg/**/*.go,**/repository/**/*.go,**/infrastructure/**/*.go
+
+sonar.test.inclusions=**/*_test.go
