--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,6 @@
 sonar.projectKey=nebengjek-demo_nebengjek
 sonar.organization=nebengjek-demo
 
-# sonar.exclusions=**/pkg/**/*.go,**/*_test.go,**/mock/*,**/mocks/**/*,**/testdata/**/*.go,**/*.json,**/*.sql,**/*.md,*.mod,*.sum,*.py,Makefile,**/*.properties,deployments/**/*,task-definition/**/*,**/*.html
-# sonar.cpd.exclusions=**/cmd/**/*.go,**/value_object/**/*.go,**/pkg/**/*.go,**/repository/**/*.go,**/infrastructure/**/*.go
-
+sonar.exclusions=deployments/**/*,Makefile,**/mock/*,**/pkg/**/*.go
+sonar.cpd.exclusions=**/cmd/**/*.go
 sonar.test.inclusions=**/*_test.go
