--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -14,7 +14,7 @@ on:
 
 jobs:
   build:
-    name: Build Docker App (Rides)
+    name: Build Docker App
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -32,12 +32,12 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Install dependencies
-        run: make tidy-{{ github.event.inputs.service_name }}
+        run: make tidy-${{ github.event.inputs.service_name }}
       - name: Build docker images
         run: |
-          docker build -f deployments/{{ github.event.inputs.service_name }}/Dockerfile -t nebengjek/{{ github.event.inputs.service_name }}:{{ github.event.inputs.version }} .
+          docker build -f deployments/${{ github.event.inputs.service_name }}/Dockerfile -t nebengjek/${{ github.event.inputs.service_name }}:{{ github.event.inputs.version }} .
   push-image:
-    name: Push Docker Image (Rides)
+    name: Push Docker Image
     runs-on: ubuntu-latest
     needs: build
     steps:
@@ -48,4 +48,4 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Push docker image
         run: |
-          docker push nebengjek/{{ github.event.inputs.service_name }}:${{ github.event.inputs.version }}
+          docker push nebengjek/${{ github.event.inputs.service_name }}:${{ github.event.inputs.version }}
