--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -13,8 +13,8 @@ on:
         default: 'latest'
 
 jobs:
-  build:
-    name: Build Docker App
+  build-image:
+    name: Build and Push Docker Image
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -33,19 +33,9 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Install dependencies
         run: make tidy-${{ github.event.inputs.service_name }}
-      - name: Build docker images
+      - name: Build docker image
         run: |
           docker build -f deployments/${{ github.event.inputs.service_name }}/Dockerfile -t nebengjek/${{ github.event.inputs.service_name }}:${{ github.event.inputs.version }} .
-  push-image:
-    name: Push Docker Image
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - uses: actions/checkout@v3
-      - uses: docker/login-action@v3.3.0
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Push docker image
         run: |
           docker push nebengjek/${{ github.event.inputs.service_name }}:${{ github.event.inputs.version }}
