--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -35,7 +35,7 @@ jobs:
         run: make tidy-${{ github.event.inputs.service_name }}
       - name: Build docker image
         run: |
-          docker build -f deployments/${{ github.event.inputs.service_name }}/Dockerfile -t nebengjek/${{ github.event.inputs.service_name }}:${{ github.event.inputs.version }} .
+          docker build -f deployments/${{ github.event.inputs.service_name }}/Dockerfile -t ermasavior/nebengjek-${{ github.event.inputs.service_name }}:${{ github.event.inputs.version }} .
       - name: Push docker image
         run: |
-          docker push nebengjek/${{ github.event.inputs.service_name }}:${{ github.event.inputs.version }}
+          docker push ermasavior/nebengjek-${{ github.event.inputs.service_name }}:${{ github.event.inputs.version }}
