--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,11 @@ jobs:
         run: make tidy && make tidy-rides && make tidy-riders && make tidy-drivers
       - name: Run tests with coverage
         run: go test -coverprofile=coverage.out ./internal/...
+      - name: Upload coverage report
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-out
+          path: coverage.out
       - name: Check code coverage
         run: |
           coverage=$(go tool cover -func=coverage.out | grep total | awk '{print substr($3, 1, length($3)-1)}')
@@ -54,11 +59,19 @@ jobs:
     - uses: actions/checkout@v4
       with:
         fetch-depth: 0
+    - name: Download coverage artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: coverage-out
+        path: ./coverage
     - name: SonarQube Scan
       uses: sonarsource/sonarqube-scan-action@v3.0.0
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         SONAR_HOST_URL: ${{ vars.SONAR_HOST_URL }}
+      with:
+        args: >
+          -Dsonar.go.coverage.reportPaths=coverage/coverage.out
   build:
     name: Build Apps
     runs-on: ubuntu-latest
