--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectKey=nebengjek-demo_nebengjek
 sonar.organization=nebengjek-demo
 
-sonar.exclusions=deployments/**/*,Makefile,mock/**/*,**/pkg/**/*.go,cmd/**/*.go
+sonar.exclusions=deployments/**/*,Makefile,mock/**/*,**/pkg/**/*.go,cmd/**/*.go,db/**/*
 sonar.test.inclusions=**/*_test.go
