--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
     inputs:
       service_name:
-        description: 'Service to be deployed (rides, drivers, riders)'
+        description: 'Service to be deployed (rides, drivers, riders, location)'
         required: true
         default: 'rides'
       version:
@@ -20,6 +20,7 @@ jobs:
   golangci-lint:
     name: Lint Code
     runs-on: ubuntu-latest
+    if: github.event_name != 'workflow_dispatch'
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
@@ -32,6 +33,7 @@ jobs:
   test:
     name: Test with Code Coverage
     runs-on: ubuntu-latest
+    if: github.event_name != 'workflow_dispatch'
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
@@ -56,6 +58,7 @@ jobs:
   hadolint:
     name: Lint Dockerfiles
     runs-on: ubuntu-latest
+    if: github.event_name != 'workflow_dispatch'
     steps:
       - uses: actions/checkout@v4
       - uses: hadolint/hadolint-action@v3.1.0
@@ -65,6 +68,7 @@ jobs:
     name: Sonarqube Checker
     runs-on: ubuntu-latest
     needs: [golangci-lint, test]
+    if: github.event_name != 'workflow_dispatch'
     steps:
     - uses: actions/checkout@v4
       with:
@@ -94,6 +98,7 @@ jobs:
         run: |
           if [[ "${{ github.event.inputs.service_name }}" != "rides" && \
                 "${{ github.event.inputs.service_name }}" != "riders" && \
+                "${{ github.event.inputs.service_name }}" != "location" && \
                 "${{ github.event.inputs.service_name }}" != "drivers" ]]; then
             echo "Invalid service name specified: ${{ github.event.inputs.service_name }}"
             exit 1
