refactor: separate cd work and add dependencies

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,20 +1,10 @@
-name: Golang CI/CD
+name: Golang Continuous Integration
 
 on:
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-  workflow_dispatch:
-    inputs:
-      service_name:
-        description: 'Service to be deployed (rides, drivers, riders, location)'
-        required: true
-        default: 'rides'
-      version:
-        description: 'Version tag of the application'
-        required: false
-        default: 'latest'
 
 jobs:
   golangci-lint:
@@ -86,33 +76,3 @@ jobs:
       with:
         args: >
           -Dsonar.go.coverage.reportPaths=coverage/coverage.out
-
-  build-image:
-    name: Build and Push Docker Image
-    runs-on: ubuntu-latest
-    needs: [sonarqube, hadolint]
-    if: github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/main'
-    steps:
-      - uses: actions/checkout@v3
-      - name: Validate service name
-        run: |
-          if [[ "${{ github.event.inputs.service_name }}" != "rides" && \
-                "${{ github.event.inputs.service_name }}" != "riders" && \
-                "${{ github.event.inputs.service_name }}" != "location" && \
-                "${{ github.event.inputs.service_name }}" != "drivers" ]]; then
-            echo "Invalid service name specified: ${{ github.event.inputs.service_name }}"
-            exit 1
-          fi
-          echo "Building service: ${{ github.event.inputs.service_name }}"
-      - uses: docker/login-action@v3.3.0
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Install dependencies
-        run: make tidy-${{ github.event.inputs.service_name }}
-      - name: Build docker image
-        run: |
-          docker build -f deployments/${{ github.event.inputs.service_name }}/Dockerfile -t ermasavior/nebengjek-${{ github.event.inputs.service_name }}:${{ github.event.inputs.version }} .
-      - name: Push docker image
-        run: |
-          docker push ermasavior/nebengjek-${{ github.event.inputs.service_name }}:${{ github.event.inputs.version }}
