--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,6 +18,8 @@ jobs:
     steps:
       - name: Check Continuous Integration Status
         id: check_status
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           # Get the status of the last run of "First Workflow"
           previous_run_status=$(gh run list --workflow="First Workflow" --limit=1 --json conclusion -q '.[0].conclusion')
