refactor: change dockerfile, move docker-compose outside

--- a/configs/.env.example
+++ b/configs/.env.example
@@ -21,9 +21,9 @@ REDIS_APP_CONFIG=
 
 JWT_SECRET_KEY=PASSWORD
 
-NATS_URL=nats://127.0.0.1:4222
+NATS_URL=nats://nats_container:4222
 
-LOG_FILE_PATH=data/logs/rides.log
+LOG_FILE_PATH=data/logs/logfile.log
 
 PAYMENT_SERVICE_URL=
 PAYMENT_SERVICE_API_KEY=
