chore: update docker compose and logfile

--- a/deployments/production/docker-compose.yml
+++ b/deployments/production/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     volumes:
       - /data/rides/redis-data:/data
     command: ["redis-server", "--appendonly", "yes"]
+    restart: always
     networks:
       local:
   nats:
@@ -22,6 +23,7 @@ services:
     environment:
       - NATS_MAX_MEMORY=2GB  # Limits memory usage
       - NATS_MAX_PAYLOAD=64MB  # Sets max message payload
+    restart: always
     networks:
       local:
   rides-service:
@@ -34,6 +36,9 @@ services:
     depends_on:
       - redis
       - nats
+    volumes:
+      - ./logs:/app/logs
+    restart: always
     networks:
       local:
   drivers-service:
@@ -46,6 +51,9 @@ services:
     depends_on:
       - redis
       - nats
+    volumes:
+      - ./logs:/app/logs
+    restart: always
     networks:
       local:
   riders-service:
@@ -58,6 +66,9 @@ services:
     depends_on:
       - redis
       - nats
+    volumes:
+      - ./logs:/app/logs
+    restart: always
     networks:
       local:
   location-service:
@@ -70,6 +81,9 @@ services:
     depends_on:
       - redis
       - nats
+    volumes:
+      - ./logs:/app/logs
+    restart: always
     networks:
       local:
 
