--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -7,10 +7,6 @@ on:
         description: 'Service to be deployed (rides, drivers, riders, location)'
         required: true
         default: 'rides'
-      version:
-        description: 'Version tag of the application'
-        required: false
-        default: 'latest'
 
 jobs:
   check-ci:
@@ -39,27 +35,30 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Validate service name
+        env:
+          SERVICE_NAME: ${{ github.event.inputs.service_name }}
+          IMAGE_TAG: ${{ github.sha }}
         run: |
-          if [[ "${{ github.event.inputs.service_name }}" != "rides" && \
-                "${{ github.event.inputs.service_name }}" != "riders" && \
-                "${{ github.event.inputs.service_name }}" != "location" && \
-                "${{ github.event.inputs.service_name }}" != "drivers" ]]; then
-            echo "Invalid service name specified: ${{ github.event.inputs.service_name }}"
+          if [[ ${SERVICE_NAME} != "rides" && \
+                ${SERVICE_NAME} != "riders" && \
+                ${SERVICE_NAME} != "location" && \
+                ${SERVICE_NAME} != "drivers" ]]; then
+            echo "Invalid service name specified: ${SERVICE_NAME}"
             exit 1
           fi
-          echo "Building service: ${{ github.event.inputs.service_name }}"
+          echo "Building service: ${SERVICE_NAME}"
       - uses: docker/login-action@v3.3.0
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Install dependencies
-        run: make tidy-${{ github.event.inputs.service_name }}
+        run: make tidy-${SERVICE_NAME}
       - name: Build docker image
         run: |
-          docker build -f deployments/${{ github.event.inputs.service_name }}/Dockerfile -t ermasavior/nebengjek-${{ github.event.inputs.service_name }}:${{ github.event.inputs.version }} .
+          docker build -f deployments/${SERVICE_NAME}/Dockerfile -t ermasavior/nebengjek-${SERVICE_NAME}:${IMAGE_TAG} .
       - name: Push docker image
         run: |
-          docker push ermasavior/nebengjek-${{ github.event.inputs.service_name }}:${{ github.event.inputs.version }}
+          docker push ermasavior/nebengjek-${SERVICE_NAME}:${IMAGE_TAG}
   deploy:
     name: Deploy to EC2
     needs: build-image
@@ -69,15 +68,16 @@ jobs:
       - name: Build & Deploy
         env:
           PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-          HOSTNAME: ${{secrets.SSH_HOSTNAME}}
-          USERNAME: ${{secrets.SSH_USERNAME}}
+          HOSTNAME: ${{ secrets.SSH_HOSTNAME }}
+          USERNAME: ${{ secrets.SSH_USERNAME }}
           SERVICE_NAME: ${{ github.event.inputs.service_name }}
+          IMAGE_TAG: ${{ github.sha }}
       
         run: |
           echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
           ssh -o StrictHostKeyChecking=no -i private_key ${USERNAME}@${HOSTNAME} '
             # Now we have got the access of EC2 and we will start the deploy.
-            cd /apps &&
-            docker compose pull ${SERVICE_NAME}-service &&
-            docker compose up -d --no-deps ${SERVICE_NAME}-service
+            cd ~/apps &&
+            IMAGE_TAG=${IMAGE_TAG} docker compose pull ${SERVICE_NAME}-service &&
+            IMAGE_TAG=${IMAGE_TAG} docker compose up -d --no-deps ${SERVICE_NAME}-service
           '
