--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,4 +1,4 @@
-name: Continuous Delivery
+name: [Staging] Continuous Delivery
 
 on:
   workflow_dispatch:
@@ -23,10 +23,10 @@ jobs:
           echo "Continuous Integration conclusion: $previous_run_status"
 
           if [[ "$previous_run_status" != "success" ]]; then
-            echo "Continuous Integration did not succeed or unfinished yet. Aborting."
+            echo "Continuous Integration did not succeed or unfinished yet😭. Aborting."
             exit 1
           else
-            echo "Continuous Integration succeeded. Continuing..."
+            echo "Continuous Integration succeeded💗. Continuing..."
           fi
   build-image:
     name: Build and Push Docker Image
@@ -82,9 +82,9 @@ jobs:
       
         run: |
           echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
-          ssh -o StrictHostKeyChecking=no -i private_key ${USERNAME}@${HOSTNAME} '
-            # Now we have got the access of EC2 and we will start the deploy.
+          ssh -o StrictHostKeyChecking=no -i private_key ${USERNAME}@${HOSTNAME} "
+            export IMAGE_TAG=${IMAGE_TAG} &&
             cd ~/apps &&
-            IMAGE_TAG=${IMAGE_TAG} docker compose pull "${SERVICE_NAME}-service" &&
-            IMAGE_TAG=${IMAGE_TAG} docker compose up -d --no-deps "${SERVICE_NAME}-service"
-          '
+            docker compose pull ${SERVICE_NAME}-service &&
+            docker compose up -d --no-deps ${SERVICE_NAME}-service
+          "
