--- a/.github/workflows/cd-prod.yml
+++ b/.github/workflows/cd-prod.yml
@@ -39,13 +39,13 @@ jobs:
           SERVICE_NAME: ${{ github.event.release.name }}
           TAG_NAME: ${{ github.event.release.tag_name }}
         run: |
-          docker build -f deployments/${SERVICE_NAME}/Dockerfile -t ermasavior/nebengjek-${SERVICE_NAME}:${IMAGE_TAG} .
+          docker build -f deployments/${SERVICE_NAME}/Dockerfile -t ermasavior/nebengjek-${SERVICE_NAME}:${TAG_NAME} .
       - name: Push docker image
         env:
           SERVICE_NAME: ${{ github.event.release.name }}
           TAG_NAME: ${{ github.event.release.tag_name }}
         run: |
-          docker push ermasavior/nebengjek-${SERVICE_NAME}:${IMAGE_TAG}
+          docker push ermasavior/nebengjek-${SERVICE_NAME}:${TAG_NAME}
   deploy:
     name: Deploy to EC2
     needs: build-image
@@ -63,7 +63,7 @@ jobs:
         run: |
           echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
           ssh -o StrictHostKeyChecking=no -i private_key ${USERNAME}@${HOSTNAME} "
-            export IMAGE_TAG=${IMAGE_TAG} &&
+            export IMAGE_TAG=${TAG_NAME} &&
             cd ~/apps &&
             docker compose pull ${SERVICE_NAME}-service &&
             docker compose up -d --no-deps ${SERVICE_NAME}-service
