--- a/configs/rides/.env.example
+++ b/configs/rides/.env.example
@@ -3,6 +3,9 @@ APP_PORT=9999
 APP_ENV=development
 API_PREFIX=/api/rides
 
+PRICE_PER_KM=3000
+RIDE_FEE_PERCENTAGE=30
+
 DB_NAME=rides_db
 DB_USERNAME=rides_username
 DB_PASSWORD=rides_password
