chore: update otel configs to be configurable (for testing)

--- a/configs/location/.env.example
+++ b/configs/location/.env.example
@@ -6,6 +6,8 @@ API_PREFIX=/api/location
 OTEL_SERVICE_NAME=nebengjek-location
 OTEL_EXPORTER_OTLP_ENDPOINT=https://otlp.nr-data.net
 OTEL_EXPORTER_OTLP_HEADERS=api-key=xxxxxxxx
+OTEL_METRIC_EXPORT_INTERVAL=60
+OTEL_BLRP_SCHEDULE_DELAY=60
 
 REDIS_HOST=redis_container
 REDIS_PORT=6379
