--- a/configs/riders/.env.example
+++ b/configs/riders/.env.example
@@ -6,6 +6,8 @@ API_PREFIX=/api/riders
 OTEL_SERVICE_NAME=nebengjek-riders
 OTEL_EXPORTER_OTLP_ENDPOINT=https://otlp.nr-data.net
 OTEL_EXPORTER_OTLP_HEADERS=api-key=xxxxxxxx
+OTEL_METRIC_EXPORT_INTERVAL=60
+OTEL_BLRP_SCHEDULE_DELAY=60
 
 JWT_SECRET_KEY=dummy_password
 
