--- a/configs/rides/.env.example
+++ b/configs/rides/.env.example
@@ -15,6 +15,8 @@ DB_PORT=5432
 OTEL_SERVICE_NAME=nebengjek-rides
 OTEL_EXPORTER_OTLP_ENDPOINT=https://otlp.nr-data.net
 OTEL_EXPORTER_OTLP_HEADERS=api-key=xxxxxxxx
+OTEL_METRIC_EXPORT_INTERVAL=60
+OTEL_BLRP_SCHEDULE_DELAY=60
 
 JWT_SECRET_KEY=dummy_password
 
